# schemamatic

./: Cargo.toml  LICENSE  README.md
examples/: flat.shex
src/: convert.rs  lib.rs  linkml_to_shex.rs  main.rs
tests/: shextests.rs
